[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://HathoraClient.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]

[node name="Main" type="Control" parent="."]
margin_right = 988.0
margin_bottom = 583.0
rect_pivot_offset = Vector2( 199, 312 )
script = ExtResource( 1 )

[node name="Login" type="Button" parent="Main"]
margin_left = 13.0
margin_top = 10.0
margin_right = 171.0
margin_bottom = 61.0
text = "Login"

[node name="LoginResponse" type="TextEdit" parent="Main"]
margin_left = 199.0
margin_top = 16.0
margin_right = 967.0
margin_bottom = 56.0
readonly = true
wrap_enabled = true

[node name="Create" type="Button" parent="Main"]
margin_left = 15.0
margin_top = 77.0
margin_right = 173.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 238, 81 )
text = "Create"

[node name="CreateResponse" type="TextEdit" parent="Main"]
margin_left = 200.0
margin_top = 84.0
margin_right = 966.0
margin_bottom = 124.0
rect_pivot_offset = Vector2( 53, 74 )
readonly = true

[node name="Connect" type="Button" parent="Main"]
margin_left = 14.0
margin_top = 142.0
margin_right = 172.0
margin_bottom = 193.0
rect_pivot_offset = Vector2( 211, 35 )
text = "Connect"

[node name="ConnectResponse" type="TextEdit" parent="Main"]
margin_left = 199.0
margin_top = 149.0
margin_right = 965.0
margin_bottom = 189.0
rect_pivot_offset = Vector2( 26, 28 )
readonly = true

[node name="SendData" type="Button" parent="Main"]
margin_left = 13.0
margin_top = 212.0
margin_right = 171.0
margin_bottom = 263.0
rect_pivot_offset = Vector2( 211, 35 )
text = "Send Data"

[node name="DataBuffer" type="TextEdit" parent="Main"]
margin_left = 198.0
margin_top = 216.0
margin_right = 964.0
margin_bottom = 522.0
rect_pivot_offset = Vector2( 26, 28 )
readonly = true
show_line_numbers = true
smooth_scrolling = true
wrap_enabled = true

[node name="Hathora" type="Node" parent="Main"]
script = ExtResource( 2 )

[connection signal="pressed" from="Main/Login" to="Main" method="_on_Button_pressed"]
[connection signal="pressed" from="Main/Create" to="Main" method="_on_Create_pressed"]
[connection signal="pressed" from="Main/Connect" to="Main" method="_on_Connect_pressed"]
[connection signal="pressed" from="Main/SendData" to="Main" method="_on_SendData_pressed"]
